[tool.poetry]
name = "conversation-handler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.54.1"
pyjwt = "^1.7.1"
uvicorn = "^0.11.3"
httpx = "^0.12.1"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.770"
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
